# UCU-bank

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.py  build.sh  compile.sh  config.json  configure.sh  docker-compose.yaml  kube.yaml  launch.sh  mongo-conf.js  mongo-conf.yaml  request.http  setup.py  setup.sql  vcpkg.json
cmake/: CMakeLists.txt
examples/mongodb_examples/: CMakeLists.txt
examples/mongodb_examples/src/: usage_overview.cpp  with_transaction.cpp
libs_examples/: CMakeLists.txt
libs_examples/include/: drogon_basic.h
libs_examples/src/: drogon_basic.cpp  drogon_rest_api.cpp
src/: CMakeLists.txt  CMakePresets.json  build.py  config.json  dockerfile
src/Account/: CMakeLists.txt
src/Account/include/: Account.h  AccountMicroservice.h  AccountType.h  constants.h
src/Account/src/: Account.cpp  AccountMicroservice.cpp  utils.cpp
src/Auth/src/email/: MailSender.cpp
src/BasicMicroservice/: CMakeLists.txt
src/BasicMicroservice/include/: BasicMicroservice.hpp  ConfigSerializer.hpp  ConfigStruct.hpp  constants.hpp  logging.hpp
src/BasicMicroservice/src/: BasicMicroservice.cpp  ConfigStruct.cpp  MessageSerializer.cpp  main.cpp
src/Gateway/: CMakeLists.txt  routes.md
src/Gateway/include/: AccountAPI.hpp  Filters.h  Gateway.h  Gateway.hpp  User.h
src/Gateway/src/: AccountAPI.cpp  Filters.cpp  Gateway.cpp  User.cpp  api_utlis.cpp
src/Transaction/include/: status.hpp
src/Transaction/src/: TransactionMicroservice.cpp
src/User/: CMakeLists.txt
src/User/include/: User.h  UserAPI.h
src/User/src/: User.cpp
src/config/: CMakeLists.txt
src/examples/drogon_examples/: CMakeLists.txt
src/examples/drogon_examples/include/: drogon_basic.h  drogon_json.h  drogon_rest_api.h
src/examples/drogon_examples/src/: drogon_basic.cpp  drogon_json.cpp
src/examples/kafka_examples/: CMakeLists.txt
src/examples/kafka_examples/src/: kafka_base_consumer.cpp
src/examples/mongodb_examples/src/: usage_overview.cpp  with_transaction.cpp
src/examples/postgresql_examples/: CMakeLists.txt
src/examples/postgresql_examples/src/: basic.cpp
src/examples/rpc_examples/: CMakeLists.txt
src/examples/rpc_examples/src/: rpc_client.cpp  rpc_server.cpp
src/mongodb/: dockerfile
src/py_pkg/: __init__.py  cmds.py  config.py
src/services/Account/: CMakeLists.txt  client.cpp  start.cpp
src/services/Account/include/: AccountClient.h  AccountMicroservice.h  account_constants.h  constants.h
src/services/Account/src/: Account.cpp  AccountClient.cpp  AccountMicroservice.cpp  utils.cpp
src/services/Auth/: CMakeLists.txt  main.cpp
src/services/Auth/include/email/: MailSender.h
src/services/BasicMicroservice/: CMakeLists.txt
src/services/BasicMicroservice/include/: BasicMicroservice.hpp  MessageSerializer.hpp  constants.hpp  logging.hpp
src/services/BasicMicroservice/src/: BasicMicroservice.cpp  logging.cpp  main.cpp
src/services/Gateway/: AccountAPI.cpp  AccountAPI.hpp  CMakeLists.txt  TransactionAPI.cpp  UserAPI.cpp  UserAPI.hpp  api_utils.cpp  api_utils.hpp  main.cpp
src/services/Gateway/include/: AccountAPI.hpp  Filters.hpp  Gateway.hpp  User.hpp  UserAPI.hpp  api_utils.hpp
src/services/Gateway/src/: AccountAPI.cpp  Gateway.cpp  User.cpp  UserAPI.cpp  api_utils.cpp
src/services/Transaction/: CMakeLists.txt  TransactionClient.cpp  TransactionClient.hpp  TransactionMicroservice.cpp  TransactionMicroservice.hpp  main.cpp  test.cpp  transaction_constants.cpp  transaction_constants.hpp
src/services/Transaction/include/: TransactionMicroservice.hpp
src/services/Transaction/src/: TransactionMicroservice.cpp
src/services/User/: CMakeLists.txt  client.cpp  start.cpp
src/services/User/include/: User.h  UserClient.h  UserMicroservice.h  UserType.h  user_constants.h
src/services/User/src/: UserClient.cpp  UserMicroservice.cpp  utils.cpp
src/services/account/: AccountClient.cpp  AccountClient.h  AccountMicroservice.cpp  AccountMicroservice.h  CMakeLists.txt  account.cli.cpp  account.cpp  account_constants.h  client.cpp  client.h  constants.h  service.cpp  service.h  start.cpp  utils.cpp  utils.h
src/services/auth/: CMakeLists.txt  auth.cpp  auth.test.cpp  client.cli.cpp  client.cpp  client.hpp  constants.hpp  service.cpp  service.hpp
src/services/auth/email/: MailSender.cpp  MailSender.h
src/services/basic/: BasicMicroservice.cpp  BasicMicroservice.hpp  CMakeLists.txt  MessageSerializer.cpp  constants.hpp  logging.cpp  logging.hpp  main.cpp
src/services/client/: client.hpp
src/services/credit/: CMakeLists.txt  client.cpp  client.h  constants.h  credit.cli.cpp  credit.cpp  service.cpp  service.h
src/services/gateway/: AccountAPI.cpp  AccountAPI.hpp  CMakeLists.txt  Filters.cpp  TransactionAPI.cpp  TransactionAPI.hpp  UserAPI.cpp  UserAPI.hpp  account.cpp  account.hpp  api_utils.cpp  api_utils.hpp  main.cpp  routes.md  routes_v2.md  transaction.cpp  transaction.hpp  user.cpp  user.hpp
src/services/gateway/ucubank_api/: api_utils.cpp  api_utils.hpp  helpers.hpp
src/services/gateway/ucubank_api/filter/: verify_json_body.cpp  verify_json_body.hpp
src/services/gateway/ucubank_api/v1/account/: account.cpp  account.hpp
src/services/gateway/ucubank_api/v1/transaction/: transaction.cpp  transaction.hpp
src/services/gateway/ucubank_api/v2/: api_base.cpp  api_base.hpp
src/services/notification/: CMakeLists.txt  client.cpp  client.h  constants.h  notification.cpp  service.cpp  service.h
src/services/notification/email/: MailSender.cpp  MailSender.h
src/services/service_tools/: macro.hpp  sha512.hpp  utils.cpp  utils.hpp
src/services/transaction/: CMakeLists.txt  TransactionClient.cpp  TransactionClient.hpp  TransactionMicroservice.cpp  TransactionMicroservice.hpp  client.cpp  client.hpp  constants.cpp  constants.hpp  main.cpp  service.cpp  service.hpp  test.cpp  transaction_constants.cpp
src/services/user/: CMakeLists.txt  UserClient.cpp  UserClient.h  UserMicroservice.cpp  UserMicroservice.h  client.cpp  client.h  constants.h  service.cpp  service.h  start.cpp  user.cli.cpp  user.cpp  utils.cpp  utils.h
(+88 files in other folders)
