cmake_minimum_required(VERSION 3.21)
project(${PROJECT_NAME} CXX)

add_subdirectory(examples/drogon_examples)
add_subdirectory(examples/kafka_examples)
add_subdirectory(examples/mongodb_examples)
add_subdirectory(examples/postgresql_examples)
add_subdirectory(examples/rpc_examples)

add_subdirectory(src/BasicMicroservice)
add_subdirectory(src/Account)
#add_subdirectory(src/User)
add_subdirectory(src/Gateway)
add_subdirectory(src/Auth)
add_subdirectory(src/Transaction)